--- a/src/app/sections/hero/hero.html
+++ b/src/app/sections/hero/hero.html
@@ -1,6 +1,6 @@
 <div class="text-center">
   <h1 class="text-6xl font-extrabold leading-tight text-gray-900 dark:text-white">
-    Hello, I'm <span class="text-blue-600">Andres</span>
+    Hello, I'm <span class="text-blue-600">Andres Villarreal</span>
   </h1>
   <p class="mt-4 text-lg text-gray-600 dark:text-gray-300">
     Full-Stack Developer • Java • Angular • AWS • UI/UX
